# zorak-services-old

./: ChangeLog  LICENSE  Makefile  Makefile.in  README  TODO  config.status  configure
CVS/: Entries  Repository
autoconf/: configure.in
autoconf/CVS/: Entries  Repository
doc/: example.conf
doc/CVS/: Entries  Repository
include/: .cvsignore  channels.h  chanserv.h  client.h  clone.h  conf.h  config.h  db.h  dcc.h  defines.h  events.h  flags.h  format.h  help.h  irc_string.h  irc_time.h  irc_types.h  main.h  md5.h  me.h  mem.h  msg.h  net.h  nicks.h  nickserv.h  oline.h  operserv.h  parse.h  privs.h  replies.h  rsa.h  sclients.h  send.h  serno.h  servers.h  snuggle.h  sys.h  sys.h.in
include/CVS/: Entries  Repository
src/: .depend  .gitignore  Makefile  Makefile.in  aclone.c  channels.c  chanserv.c  clone.c  conf.c  dcc.c  events.c  format.c  help.c  irc_string.c  main.c  md5.c  mem.c  net.c  net.c.orig  net.c.patch  nicks.c  nickserv.c  oline.c  operserv.c  parse.c  rsa.c  sclients.c  send.c  servers.c  snuggle.c  users.c
src/CVS/: Entries  Repository
